<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Cooking Social Network</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_request">Upload recipe image</string>
    <string name="recipe_name_hint">Recipe name(e.g. Panna cotta, Tiramisu, etc.)</string>
    <string name="recipe_description_hint">Recipe description</string>
    <string name="serves">Serves</string>
    <string name="serves_hint">2 people</string>
    <string name="cook_time">Cook time</string>
    <string name="cook_time_hint">30 minutes</string>
    <string name="ingredients_title">Ingredients</string>
    <string name="ingredients_hint">4 egg yolk</string>
    <string name="add_ingredient">+ Ingredient</string>
    <string name="method_title">Method</string>
    <string name="method_step_hint">Beat egg yolks until fluffy</string>
    <string name="add_method_step">+ Step</string>
    <string name="account">Account</string>
    <string name="notification">Notification</string>
    <string name="report">Report</string>
    <string name="language">Language</string>
    <string name="information">Information</string>
    <string name="dark_mode">Dark mode</string>
    <string name="log_out">Log out</string>
    <string name="home_tab">Home</string>
    <string name="search_tab">Search</string>
    <string name="notify_tab">Notify</string>
    <string name="profile_tab">Profile</string>
    <string name="setting_title">Setting</string>
    <string name="setting_profile_title">Setting Profile</string>
    <string name="post_title">Post</string>
    <string name="post">Post</string>
    <string name="back_button">Back</string>
    <string name="difficulty">Difficulty</string>
    <string name="version">Version</string>
    <string name="developed">Developed by</string>
    <string name="user">User</string>
    <string name="double_back">Click BACK again to exit</string>
    <string name="favorite">Favorite</string>
    <string name="comment">Comment</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="all">All</string>
    <string name="week">week</string>
    <string name="day">day</string>
    <string name="hour">hour</string>
    <string name="minute">minute</string>
    <string name="second">second</string>
    <string name="next">Next</string>
    <string name="login">Login</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="portion_type">
        <item>pieces</item>
        <item>servings</item>
    </string-array>
    <string-array name="unit">
        <item>g</item>
        <item>ml</item>
        <item>tsp</item>
        <item>tbsp</item>
        <item>bag</item>
        <item>bar</item>
        <item>bulb</item>
        <item>bundle</item>
        <item>capsule</item>
        <item>cl</item>
        <item>clove</item>
        <item>cob</item>
        <item>dash</item>
        <item>drop</item>
        <item>head</item>
        <item>kg</item>
        <item>l</item>
        <item>leaf</item>
        <item>loaf</item>
        <item>meter</item>
        <item>package</item>
        <item>pinch</item>
        <item>scoop</item>
        <item>sheet</item>
        <item>sprig</item>
        <item>stalk</item>
        <item>strip</item>
        <item>tea bag</item>
    </string-array>

</resources>