<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".setting.SettingPage"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:padding="12dp">

        <ImageView
            android:id="@+id/back_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="0dp"
            android:src="@drawable/ic_back_ios"
            app:tint="@color/black"
            android:contentDescription="@string/back_button" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/setting_title"/>
    </RelativeLayout>

    <LinearLayout

        android:id="@+id/setting_page_main_layout"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/btn_account"
            android:paddingHorizontal="20dp"
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                app:tint="@color/black"
                android:src="@drawable/ic_account_circle"/>

            <TextView
                android:paddingStart="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/account"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                app:tint="@color/black"
                android:src="@drawable/ic_forward_ios"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/dark_mode"
            android:paddingHorizontal="20dp"
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                app:tint="@color/black"
                android:src="@drawable/ic_dark_mode"/>

            <TextView
                android:paddingStart="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/dark_mode"/>

            <Switch
                android:id="@+id/switch_dark_mode"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </RelativeLayout>

        <RelativeLayout
            android:paddingHorizontal="20dp"
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                app:tint="@color/black"
                android:src="@drawable/ic_notifications"/>

            <TextView
                android:paddingStart="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/notification"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                app:tint="@color/black"
                android:src="@drawable/ic_forward_ios"/>

        </RelativeLayout>

        <RelativeLayout
            android:paddingHorizontal="20dp"
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                app:tint="@color/black"
                android:src="@drawable/ic_send"/>

            <TextView
                android:paddingStart="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/report"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                app:tint="@color/black"
                android:src="@drawable/ic_forward_ios"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/changelanguage"
            android:paddingHorizontal="20dp"
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                app:tint="@color/black"
                android:src="@drawable/ic_translate"/>

            <TextView
                android:paddingStart="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/language"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                app:tint="@color/black"
                android:src="@drawable/ic_forward_ios"/>

        </RelativeLayout>

        <RelativeLayout
            android:paddingHorizontal="20dp"
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                app:tint="@color/black"
                android:src="@drawable/ic_info"/>

            <TextView
                android:paddingStart="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/information"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                app:tint="@color/black"
                android:src="@drawable/ic_forward_ios"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/log_out"
            android:layout_gravity="center" />
    </LinearLayout>

</LinearLayout>